feat(children): return children
create endpoint for return children
